# LogiCraft

./: LICENSE.md
LogiCraft/: CMakeLists.txt  CMakePresets.json
LogiCraft/Code/: .clang-format
LogiCraft/Code/Box2D/lib/: box2d.lib
LogiCraft/Code/Box2D/lib/cmake/box2d/: box2dConfig.cmake
LogiCraft/Code/Editor/: CMakeLists.txt  main.cpp
LogiCraft/Code/Editor/Console/: Console.cpp  Console.h
LogiCraft/Code/Editor/ContentBrowser/: ContentBrowser.cpp  ContentBrowser.h  PanelContentBrowser.cpp  PanelContentBrowser.h
LogiCraft/Code/Editor/Core/: Editor.cpp  Editor.h  Panel.cpp  Panel.h
LogiCraft/Code/Editor/Objects/: EditorComponent.cpp  EditorComponent.h  EditorObject.cpp  EditorObject.h  EditorObjectManager.cpp  EditorObjectManager.h  PanelGraphEditor.cpp  PanelGraphEditor.h  PanelObject.cpp  PanelObject.h  PanelOutliner.cpp  PanelOutliner.h  SelectionManager.cpp  SelectionManager.h
LogiCraft/Code/Editor/Objects/Components/: EditorComponentCollider.cpp  EditorComponentCollider.h  EditorComponentController.cpp  EditorComponentController.h  EditorComponentSprite.cpp  EditorComponentSprite.h
LogiCraft/Code/Editor/ResourceSystem/: EditorResource.cpp  EditorResource.h  EditorResourceManager.cpp  EditorResourceManager.h  PanelContentBrowser.cpp  PanelContentBrowser.h  PanelResourceEditor.cpp  PanelResourceEditor.h
LogiCraft/Code/Editor/ResourceSystem/Resources/: EditorTexture.cpp  EditorTexture.h
LogiCraft/Code/Editor/Resources/: EditorResource.cpp  EditorResource.h  EditorTexture.h  PanelResourceEditor.cpp  PanelResourceEditor.h
LogiCraft/Code/Editor/Utils/: ImGuiUtils.h  imGuiUtils.cpp
LogiCraft/Code/Editor/Widgets/: GraphEditor.cpp  GraphEditor.h  ImGuiDemo.cpp  ImGuiDemo.h  InputText.cpp  InputText.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  MenuItem.cpp  MenuItem.h  PanelImGuiDemo.cpp  PanelImGuiDemo.h  ScrollZone.cpp  ScrollZone.h  Selectable.cpp  Selectable.h  SelectionManager.cpp  SelectionManager.h  Widget.cpp  Widget.h
LogiCraft/Code/Engine/: CMakeLists.txt  DLLExport.h  define.h
LogiCraft/Code/Engine/Core/: Action.cpp  Action.h  ActionManager.cpp  ActionManager.h  AsyncLoadedObject.cpp  AsyncLoadedObject.h  Engine.cpp  Engine.h  Event.cpp  Event.h  EventSystem.cpp  EventSystem.h  Logger.cpp  Logger.h  Profiler.cpp  Profiler.h  Serializable.cpp  Serializable.h  Serializer.cpp  Serializer.h  SmartPtr.h  TaskManager.cpp  TaskManager.h
LogiCraft/Code/Engine/Objects/: GameComponent.cpp  GameComponent.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h
LogiCraft/Code/Engine/Objects/Components/: ComponentCollider.cpp  ComponentCollider.h  ComponentController.cpp  ComponentController.h  ComponentSprite.cpp  ComponentSprite.h
LogiCraft/Code/Engine/ResourceSystem/: Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h
LogiCraft/Code/Engine/ResourceSystem/Resources/: Texture.cpp  Texture.h
LogiCraft/Code/Engine/UnitTest/: UnitTest.h
LogiCraft/Code/Engine/Utils/: GuidUtils.cpp  GuidUtils.h  SfmlUtils.cpp  SfmlUtils.h  SmartPtr.cpp  SmartPtr.h  StringUtils.cpp  StringUtils.h  TypeDefinition.h
LogiCraft/Code/SFML-2.6.1/include/SFML/Graphics/: Glyph.hpp
LogiCraft/Code/imgui/: CMakeLists.txt  imgui-SFML.cpp
LogiCraft/Code/imgui-sfml/: .gitignore
LogiCraft/Code/json/: CMakeLists.txt  json.cpp
LogiCraft/Code/json/detail/: exceptions.hpp
LogiCraft/Code/json/detail/conversions/: to_chars.hpp
LogiCraft/Code/json/detail/iterators/: iteration_proxy.hpp  iterator_traits.hpp
LogiCraft/Code/json/detail/meta/: is_sax.hpp
LogiCraft/Code/json_old/: adl_serializer.hpp  json.hpp
LogiCraft/Code/json_old/detail/: json_pointer.hpp  macro_scope.hpp  macro_unscope.hpp
LogiCraft/Code/json_old/detail/conversions/: from_json.hpp  to_json.hpp
LogiCraft/Code/json_old/detail/input/: binary_reader.hpp  input_adapters.hpp  json_sax.hpp  lexer.hpp  parser.hpp
LogiCraft/Code/json_old/detail/iterators/: iter_impl.hpp
LogiCraft/Code/json_old/detail/meta/: detected.hpp  type_traits.hpp
LogiCraft/Code/json_old/detail/output/: binary_writer.hpp  output_adapters.hpp  serializer.hpp
